--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ body {
     background-color: #e5e7eb;
     display:flex;
     flex-direction: column;
+    align-items: center;
     padding: 2% 15% 2% 15%;
 }
 .container-header{
@@ -75,7 +76,11 @@ body {
     color: #1F2937;
     font-style: italic;
     font-weight: lighter;
-    font-size: 1.5rem;
+    font-size: larger;
+    overflow-wrap: break-word;
+}
+#paraquote{
+    width: 90%;
 }
 .container1{
     background-color: #1F2937;
@@ -99,7 +104,7 @@ body {
     text-align: center;
     color: #e5e7eb;
     font-weight: lighter;
-    font-size: 1.5rem;
+    font-size: larger;
 }
 .container-skills{
     background-color: #e5e7eb;
@@ -130,7 +135,7 @@ body {
     text-align: center;
     color: #1F2937;
     font-weight: lighter;
-    font-size: 1.5rem;
+    font-size: larger;
 }
 .contacts{
     display: flex;
